# parallel-benchmarks

./: .gitignore  LICENSE  README.md  build
factorization/: factorize.c  factorize.hs  factorize.lisp
mandelbrot/: mandel.c  mpi_mandel.c
mandelbrot/mandel-c/: mandel.c
mandelbrot/mandel-hs/: mandel-hs.cabal
mandelbrot/mandel-hs/app/: Main.hs
mandelbrot/mandelbrot-c/: common.h  mandelbrot.c  mpi_mandel.c  mpi_mandelbrot.c
mandelbrot/mandelbrot-hs/app/: Main.hs
matrix-mult/: matrix-mult.hs
matrix-mult/matrix-mult-c/: matrix_mult.c
matrix-mult/matrix-mult-hs/: matrix-mult-hs.cabal
matrix-mult/matrix-mult-hs/app/: Main.hs
monte-carlo/monte-carlo-hs/: mk  monte-carlo-hs.cabal
monte-carlo/monte-carlo-hs/app/: Main.hs
pi/: pi.hs
pi/pi-hs/: pi-hs.cabal
pi/pi-hs/app/: Main.hs
ping-pong/ping-pong-c/: mpi_ping-pong.c
primes/: benchmark  plot.R  report
primes/primes-c/: common.h  mpi_primes.c  primes.c
primes/primes-hs/: primes-hs.cabal
primes/primes-hs/app/: Main.hs
ray-tracer/ray-tracer-c/: color.h  ray-tracer.c  ray.h  vec3.h
ray-tracer/ray-tracer-hs/: ray-tracer-hs.cabal
ray-tracer/ray-tracer-hs/app/: Main.hs  Ray.hs  Vec.hs  Vec3.hs
