cabal-version:      2.4
name:               mandel-hs
version:            0.1.0.0

license:            MIT
author:             Ethan
maintainer:         ethan.hawk@valpo.edu


executable mandel-hs
    main-is:          Main.hs

    build-depends:    base, bytestring, gloss
    hs-source-dirs:   app
    default-language: Haskell2010
