cabal-version:      2.4
name:               pi-hs
version:            0.1.0.0

license:            MIT
author:             Ethan
maintainer:         ethan.hawk@valpo.edu


executable pi-hs
    main-is:          Main.hs

    build-depends:    base, parallel
    hs-source-dirs:   app
    default-language: Haskell2010
